hw3-main/obj/parser.output
Terminals unused in grammar

    NODE_TOKEN


State 18 conflicts: 1 reduce/reduce


Grammar

    0 $accept: prog $end

    1 prog: PROGRAM IDENTIFIER LPAREN identifier_list RPAREN SEMICOLON declarations subprogram_declarations compound_statement DOT

    2 identifier_list: IDENTIFIER
    3                | identifier_list COMMA IDENTIFIER

    4 declarations: declarations VAR identifier_list COLON type SEMICOLON
    5             | %empty

    6 type: standard_type
    7     | ARRAY LBRACE num DOTDOT num RBRACE OF type

    8 num: INTEGERNUM
    9    | REALNUMBER
   10    | SCIENTIFIC

   11 standard_type: INTEGER
   12              | REAL
   13              | STRING

   14 subprogram_declarations: subprogram_declarations subprogram_declaration SEMICOLON
   15                        | %empty

   16 subprogram_declaration: subprogram_head declarations subprogram_declarations compound_statement

   17 subprogram_head: FUNCTION IDENTIFIER arguments COLON standard_type SEMICOLON
   18                | PROCEDURE IDENTIFIER arguments SEMICOLON

   19 arguments: LPAREN parameter_list RPAREN
   20          | %empty

   21 parameter_list: optional_var identifier_list COLON type
   22               | optional_var identifier_list COLON type SEMICOLON parameter_list

   23 optional_var: VAR
   24             | %empty

   25 compound_statement: PBEGIN optional_statements END

   26 optional_statements: statement_list
   27                    | %empty

   28 statement_list: statement
   29               | statement_list SEMICOLON statement

   30 statement: variable ASSIGNMENT expression
   31          | procedure_statement
   32          | compound_statement
   33          | IF expression THEN statement ELSE statement
   34          | WHILE expression DO statement
   35          | %empty

   36 variable: IDENTIFIER tail

   37 tail: LBRACE expression RBRACE tail
   38     | %empty

   39 procedure_statement: IDENTIFIER
   40                    | IDENTIFIER LPAREN expression_list RPAREN

   41 expression_list: expression
   42                | expression_list COMMA expression

   43 expression: boolexpression
   44           | boolexpression AND boolexpression
   45           | boolexpression OR boolexpression

   46 boolexpression: simple_expression
   47               | simple_expression relop simple_expression

   48 simple_expression: term
   49                  | simple_expression addop term

   50 term: factor
   51     | term mulop factor

   52 factor: IDENTIFIER tail
   53       | IDENTIFIER LPAREN expression_list RPAREN
   54       | num
   55       | LITERALSTR
   56       | LPAREN expression RPAREN
   57       | NOT factor
   58       | SUBOP factor

   59 addop: ADDOP
   60      | SUBOP

   61 mulop: MULOP
   62      | DIVOP

   63 relop: LTOP
   64      | GTOP
   65      | EQOP
   66      | LETOP
   67      | GETOP
   68      | NEQOP


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    PROGRAM <node> (258) 1
    ELSE <node> (259) 33
    WHILE <node> (260) 34
    DO <node> (261) 34
    THEN <node> (262) 33
    IF <node> (263) 33
    OF <node> (264) 7
    FUNCTION <node> (265) 17
    PROCEDURE <node> (266) 18
    END <node> (267) 25
    ARRAY <node> (268) 7
    VAR <node> (269) 4 23
    NOT <node> (270) 57
    STRING <node> (271) 13
    ASSIGNMENT <node> (272) 30
    COLON <node> (273) 4 17 21 22
    COMMA <node> (274) 3 42
    INTEGER <node> (275) 11
    AND <node> (276) 44
    OR <node> (277) 45
    DOT <node> (278) 1
    DOTDOT <node> (279) 7
    GETOP <node> (280) 67
    GTOP <node> (281) 64
    LBRACE <node> (282) 7 37
    LETOP <node> (283) 66
    LPAREN <node> (284) 1 19 40 53 56
    LTOP <node> (285) 63
    ADDOP <node> (286) 59
    MULOP <node> (287) 61
    DIVOP <node> (288) 62
    EQOP <node> (289) 65
    NEQOP <node> (290) 68
    RBRACE <node> (291) 7 37
    REAL <node> (292) 12
    RPAREN <node> (293) 1 19 40 53 56
    SEMICOLON <node> (294) 1 4 14 17 18 22 29
    PBEGIN <node> (295) 25
    SUBOP <node> (296) 58 60
    NODE_TOKEN <node> (297)
    INTEGERNUM <node> (298) 8
    REALNUMBER <node> (299) 9
    SCIENTIFIC <node> (300) 10
    IDENTIFIER <node> (301) 1 2 3 17 18 36 39 40 52 53
    LITERALSTR <node> (302) 55


Nonterminals, with rules where they appear

    $accept (48)
        on left: 0
    prog <node> (49)
        on left: 1
        on right: 0
    identifier_list <node> (50)
        on left: 2 3
        on right: 1 3 4 21 22
    declarations <node> (51)
        on left: 4 5
        on right: 1 4 16
    type <node> (52)
        on left: 6 7
        on right: 4 7 21 22
    num <node> (53)
        on left: 8 9 10
        on right: 7 54
    standard_type <node> (54)
        on left: 11 12 13
        on right: 6 17
    subprogram_declarations <node> (55)
        on left: 14 15
        on right: 1 14 16
    subprogram_declaration <node> (56)
        on left: 16
        on right: 14
    subprogram_head <node> (57)
        on left: 17 18
        on right: 16
    arguments <node> (58)
        on left: 19 20
        on right: 17 18
    parameter_list <node> (59)
        on left: 21 22
        on right: 19 22
    optional_var <node> (60)
        on left: 23 24
        on right: 21 22
    compound_statement <node> (61)
        on left: 25
        on right: 1 16 32
    optional_statements <node> (62)
        on left: 26 27
        on right: 25
    statement_list <node> (63)
        on left: 28 29
        on right: 26 29
    statement <node> (64)
        on left: 30 31 32 33 34 35
        on right: 28 29 33 34
    variable <node> (65)
        on left: 36
        on right: 30
    tail <node> (66)
        on left: 37 38
        on right: 36 37 52
    procedure_statement <node> (67)
        on left: 39 40
        on right: 31
    expression_list <node> (68)
        on left: 41 42
        on right: 40 42 53
    expression <node> (69)
        on left: 43 44 45
        on right: 30 33 34 37 41 42 56
    boolexpression <node> (70)
        on left: 46 47
        on right: 43 44 45
    simple_expression <node> (71)
        on left: 48 49
        on right: 46 47 49
    term <node> (72)
        on left: 50 51
        on right: 48 49 51
    factor <node> (73)
        on left: 52 53 54 55 56 57 58
        on right: 50 51 57 58
    addop <node> (74)
        on left: 59 60
        on right: 49
    mulop <node> (75)
        on left: 61 62
        on right: 51
    relop <node> (76)
        on left: 63 64 65 66 67 68
        on right: 47


State 0

    0 $accept: . prog $end

    PROGRAM  shift, and go to state 1

    prog  go to state 2


State 1

    1 prog: PROGRAM . IDENTIFIER LPAREN identifier_list RPAREN SEMICOLON declarations subprogram_declarations compound_statement DOT

    IDENTIFIER  shift, and go to state 3


State 2

    0 $accept: prog . $end

    $end  shift, and go to state 4


State 3

    1 prog: PROGRAM IDENTIFIER . LPAREN identifier_list RPAREN SEMICOLON declarations subprogram_declarations compound_statement DOT

    LPAREN  shift, and go to state 5


State 4

    0 $accept: prog $end .

    $default  accept


State 5

    1 prog: PROGRAM IDENTIFIER LPAREN . identifier_list RPAREN SEMICOLON declarations subprogram_declarations compound_statement DOT

    IDENTIFIER  shift, and go to state 6

    identifier_list  go to state 7


State 6

    2 identifier_list: IDENTIFIER .

    $default  reduce using rule 2 (identifier_list)


State 7

    1 prog: PROGRAM IDENTIFIER LPAREN identifier_list . RPAREN SEMICOLON declarations subprogram_declarations compound_statement DOT
    3 identifier_list: identifier_list . COMMA IDENTIFIER

    COMMA   shift, and go to state 8
    RPAREN  shift, and go to state 9


State 8

    3 identifier_list: identifier_list COMMA . IDENTIFIER

    IDENTIFIER  shift, and go to state 10


State 9

    1 prog: PROGRAM IDENTIFIER LPAREN identifier_list RPAREN . SEMICOLON declarations subprogram_declarations compound_statement DOT

    SEMICOLON  shift, and go to state 11


State 10

    3 identifier_list: identifier_list COMMA IDENTIFIER .

    $default  reduce using rule 3 (identifier_list)


State 11

    1 prog: PROGRAM IDENTIFIER LPAREN identifier_list RPAREN SEMICOLON . declarations subprogram_declarations compound_statement DOT

    $default  reduce using rule 5 (declarations)

    declarations  go to state 12


State 12

    1 prog: PROGRAM IDENTIFIER LPAREN identifier_list RPAREN SEMICOLON declarations . subprogram_declarations compound_statement DOT
    4 declarations: declarations . VAR identifier_list COLON type SEMICOLON

    VAR  shift, and go to state 13

    $default  reduce using rule 15 (subprogram_declarations)

    subprogram_declarations  go to state 14


State 13

    4 declarations: declarations VAR . identifier_list COLON type SEMICOLON

    IDENTIFIER  shift, and go to state 6

    identifier_list  go to state 15


State 14

    1 prog: PROGRAM IDENTIFIER LPAREN identifier_list RPAREN SEMICOLON declarations subprogram_declarations . compound_statement DOT
   14 subprogram_declarations: subprogram_declarations . subprogram_declaration SEMICOLON

    FUNCTION   shift, and go to state 16
    PROCEDURE  shift, and go to state 17
    PBEGIN     shift, and go to state 18

    subprogram_declaration  go to state 19
    subprogram_head         go to state 20
    compound_statement      go to state 21


State 15

    3 identifier_list: identifier_list . COMMA IDENTIFIER
    4 declarations: declarations VAR identifier_list . COLON type SEMICOLON

    COLON  shift, and go to state 22
    COMMA  shift, and go to state 8


State 16

   17 subprogram_head: FUNCTION . IDENTIFIER arguments COLON standard_type SEMICOLON

    IDENTIFIER  shift, and go to state 23


State 17

   18 subprogram_head: PROCEDURE . IDENTIFIER arguments SEMICOLON

    IDENTIFIER  shift, and go to state 24


State 18

   25 compound_statement: PBEGIN . optional_statements END

    WHILE       shift, and go to state 25
    IF          shift, and go to state 26
    PBEGIN      shift, and go to state 18
    IDENTIFIER  shift, and go to state 27

    END        reduce using rule 27 (optional_statements)
    END        [reduce using rule 35 (statement)]
    SEMICOLON  reduce using rule 35 (statement)
    $default   reduce using rule 27 (optional_statements)

    compound_statement   go to state 28
    optional_statements  go to state 29
    statement_list       go to state 30
    statement            go to state 31
    variable             go to state 32
    procedure_statement  go to state 33


State 19

   14 subprogram_declarations: subprogram_declarations subprogram_declaration . SEMICOLON

    SEMICOLON  shift, and go to state 34


State 20

   16 subprogram_declaration: subprogram_head . declarations subprogram_declarations compound_statement

    $default  reduce using rule 5 (declarations)

    declarations  go to state 35


State 21

    1 prog: PROGRAM IDENTIFIER LPAREN identifier_list RPAREN SEMICOLON declarations subprogram_declarations compound_statement . DOT

    DOT  shift, and go to state 36


State 22

    4 declarations: declarations VAR identifier_list COLON . type SEMICOLON

    ARRAY    shift, and go to state 37
    STRING   shift, and go to state 38
    INTEGER  shift, and go to state 39
    REAL     shift, and go to state 40

    type           go to state 41
    standard_type  go to state 42


State 23

   17 subprogram_head: FUNCTION IDENTIFIER . arguments COLON standard_type SEMICOLON

    LPAREN  shift, and go to state 43

    $default  reduce using rule 20 (arguments)

    arguments  go to state 44


State 24

   18 subprogram_head: PROCEDURE IDENTIFIER . arguments SEMICOLON

    LPAREN  shift, and go to state 43

    $default  reduce using rule 20 (arguments)

    arguments  go to state 45


State 25

   34 statement: WHILE . expression DO statement

    NOT         shift, and go to state 46
    LPAREN      shift, and go to state 47
    SUBOP       shift, and go to state 48
    INTEGERNUM  shift, and go to state 49
    REALNUMBER  shift, and go to state 50
    SCIENTIFIC  shift, and go to state 51
    IDENTIFIER  shift, and go to state 52
    LITERALSTR  shift, and go to state 53

    num                go to state 54
    expression         go to state 55
    boolexpression     go to state 56
    simple_expression  go to state 57
    term               go to state 58
    factor             go to state 59


State 26

   33 statement: IF . expression THEN statement ELSE statement

    NOT         shift, and go to state 46
    LPAREN      shift, and go to state 47
    SUBOP       shift, and go to state 48
    INTEGERNUM  shift, and go to state 49
    REALNUMBER  shift, and go to state 50
    SCIENTIFIC  shift, and go to state 51
    IDENTIFIER  shift, and go to state 52
    LITERALSTR  shift, and go to state 53

    num                go to state 54
    expression         go to state 60
    boolexpression     go to state 56
    simple_expression  go to state 57
    term               go to state 58
    factor             go to state 59


State 27

   36 variable: IDENTIFIER . tail
   39 procedure_statement: IDENTIFIER .
   40                    | IDENTIFIER . LPAREN expression_list RPAREN

    LBRACE  shift, and go to state 61
    LPAREN  shift, and go to state 62

    ASSIGNMENT  reduce using rule 38 (tail)
    $default    reduce using rule 39 (procedure_statement)

    tail  go to state 63


State 28

   32 statement: compound_statement .

    $default  reduce using rule 32 (statement)


State 29

   25 compound_statement: PBEGIN optional_statements . END

    END  shift, and go to state 64


State 30

   26 optional_statements: statement_list .
   29 statement_list: statement_list . SEMICOLON statement

    SEMICOLON  shift, and go to state 65

    $default  reduce using rule 26 (optional_statements)


State 31

   28 statement_list: statement .

    $default  reduce using rule 28 (statement_list)


State 32

   30 statement: variable . ASSIGNMENT expression

    ASSIGNMENT  shift, and go to state 66


State 33

   31 statement: procedure_statement .

    $default  reduce using rule 31 (statement)


State 34

   14 subprogram_declarations: subprogram_declarations subprogram_declaration SEMICOLON .

    $default  reduce using rule 14 (subprogram_declarations)


State 35

    4 declarations: declarations . VAR identifier_list COLON type SEMICOLON
   16 subprogram_declaration: subprogram_head declarations . subprogram_declarations compound_statement

    VAR  shift, and go to state 13

    $default  reduce using rule 15 (subprogram_declarations)

    subprogram_declarations  go to state 67


State 36

    1 prog: PROGRAM IDENTIFIER LPAREN identifier_list RPAREN SEMICOLON declarations subprogram_declarations compound_statement DOT .

    $default  reduce using rule 1 (prog)


State 37

    7 type: ARRAY . LBRACE num DOTDOT num RBRACE OF type

    LBRACE  shift, and go to state 68


State 38

   13 standard_type: STRING .

    $default  reduce using rule 13 (standard_type)


State 39

   11 standard_type: INTEGER .

    $default  reduce using rule 11 (standard_type)


State 40

   12 standard_type: REAL .

    $default  reduce using rule 12 (standard_type)


State 41

    4 declarations: declarations VAR identifier_list COLON type . SEMICOLON

    SEMICOLON  shift, and go to state 69


State 42

    6 type: standard_type .

    $default  reduce using rule 6 (type)


State 43

   19 arguments: LPAREN . parameter_list RPAREN

    VAR  shift, and go to state 70

    $default  reduce using rule 24 (optional_var)

    parameter_list  go to state 71
    optional_var    go to state 72


State 44

   17 subprogram_head: FUNCTION IDENTIFIER arguments . COLON standard_type SEMICOLON

    COLON  shift, and go to state 73


State 45

   18 subprogram_head: PROCEDURE IDENTIFIER arguments . SEMICOLON

    SEMICOLON  shift, and go to state 74


State 46

   57 factor: NOT . factor

    NOT         shift, and go to state 46
    LPAREN      shift, and go to state 47
    SUBOP       shift, and go to state 48
    INTEGERNUM  shift, and go to state 49
    REALNUMBER  shift, and go to state 50
    SCIENTIFIC  shift, and go to state 51
    IDENTIFIER  shift, and go to state 52
    LITERALSTR  shift, and go to state 53

    num     go to state 54
    factor  go to state 75


State 47

   56 factor: LPAREN . expression RPAREN

    NOT         shift, and go to state 46
    LPAREN      shift, and go to state 47
    SUBOP       shift, and go to state 48
    INTEGERNUM  shift, and go to state 49
    REALNUMBER  shift, and go to state 50
    SCIENTIFIC  shift, and go to state 51
    IDENTIFIER  shift, and go to state 52
    LITERALSTR  shift, and go to state 53

    num                go to state 54
    expression         go to state 76
    boolexpression     go to state 56
    simple_expression  go to state 57
    term               go to state 58
    factor             go to state 59


State 48

   58 factor: SUBOP . factor

    NOT         shift, and go to state 46
    LPAREN      shift, and go to state 47
    SUBOP       shift, and go to state 48
    INTEGERNUM  shift, and go to state 49
    REALNUMBER  shift, and go to state 50
    SCIENTIFIC  shift, and go to state 51
    IDENTIFIER  shift, and go to state 52
    LITERALSTR  shift, and go to state 53

    num     go to state 54
    factor  go to state 77


State 49

    8 num: INTEGERNUM .

    $default  reduce using rule 8 (num)


State 50

    9 num: REALNUMBER .

    $default  reduce using rule 9 (num)


State 51

   10 num: SCIENTIFIC .

    $default  reduce using rule 10 (num)


State 52

   52 factor: IDENTIFIER . tail
   53       | IDENTIFIER . LPAREN expression_list RPAREN

    LBRACE  shift, and go to state 61
    LPAREN  shift, and go to state 78

    $default  reduce using rule 38 (tail)

    tail  go to state 79


State 53

   55 factor: LITERALSTR .

    $default  reduce using rule 55 (factor)


State 54

   54 factor: num .

    $default  reduce using rule 54 (factor)


State 55

   34 statement: WHILE expression . DO statement

    DO  shift, and go to state 80


State 56

   43 expression: boolexpression .
   44           | boolexpression . AND boolexpression
   45           | boolexpression . OR boolexpression

    AND  shift, and go to state 81
    OR   shift, and go to state 82

    $default  reduce using rule 43 (expression)


State 57

   46 boolexpression: simple_expression .
   47               | simple_expression . relop simple_expression
   49 simple_expression: simple_expression . addop term

    GETOP  shift, and go to state 83
    GTOP   shift, and go to state 84
    LETOP  shift, and go to state 85
    LTOP   shift, and go to state 86
    ADDOP  shift, and go to state 87
    EQOP   shift, and go to state 88
    NEQOP  shift, and go to state 89
    SUBOP  shift, and go to state 90

    $default  reduce using rule 46 (boolexpression)

    addop  go to state 91
    relop  go to state 92


State 58

   48 simple_expression: term .
   51 term: term . mulop factor

    MULOP  shift, and go to state 93
    DIVOP  shift, and go to state 94

    $default  reduce using rule 48 (simple_expression)

    mulop  go to state 95


State 59

   50 term: factor .

    $default  reduce using rule 50 (term)


State 60

   33 statement: IF expression . THEN statement ELSE statement

    THEN  shift, and go to state 96


State 61

   37 tail: LBRACE . expression RBRACE tail

    NOT         shift, and go to state 46
    LPAREN      shift, and go to state 47
    SUBOP       shift, and go to state 48
    INTEGERNUM  shift, and go to state 49
    REALNUMBER  shift, and go to state 50
    SCIENTIFIC  shift, and go to state 51
    IDENTIFIER  shift, and go to state 52
    LITERALSTR  shift, and go to state 53

    num                go to state 54
    expression         go to state 97
    boolexpression     go to state 56
    simple_expression  go to state 57
    term               go to state 58
    factor             go to state 59


State 62

   40 procedure_statement: IDENTIFIER LPAREN . expression_list RPAREN

    NOT         shift, and go to state 46
    LPAREN      shift, and go to state 47
    SUBOP       shift, and go to state 48
    INTEGERNUM  shift, and go to state 49
    REALNUMBER  shift, and go to state 50
    SCIENTIFIC  shift, and go to state 51
    IDENTIFIER  shift, and go to state 52
    LITERALSTR  shift, and go to state 53

    num                go to state 54
    expression_list    go to state 98
    expression         go to state 99
    boolexpression     go to state 56
    simple_expression  go to state 57
    term               go to state 58
    factor             go to state 59


State 63

   36 variable: IDENTIFIER tail .

    $default  reduce using rule 36 (variable)


State 64

   25 compound_statement: PBEGIN optional_statements END .

    $default  reduce using rule 25 (compound_statement)


State 65

   29 statement_list: statement_list SEMICOLON . statement

    WHILE       shift, and go to state 25
    IF          shift, and go to state 26
    PBEGIN      shift, and go to state 18
    IDENTIFIER  shift, and go to state 27

    $default  reduce using rule 35 (statement)

    compound_statement   go to state 28
    statement            go to state 100
    variable             go to state 32
    procedure_statement  go to state 33


State 66

   30 statement: variable ASSIGNMENT . expression

    NOT         shift, and go to state 46
    LPAREN      shift, and go to state 47
    SUBOP       shift, and go to state 48
    INTEGERNUM  shift, and go to state 49
    REALNUMBER  shift, and go to state 50
    SCIENTIFIC  shift, and go to state 51
    IDENTIFIER  shift, and go to state 52
    LITERALSTR  shift, and go to state 53

    num                go to state 54
    expression         go to state 101
    boolexpression     go to state 56
    simple_expression  go to state 57
    term               go to state 58
    factor             go to state 59


State 67

   14 subprogram_declarations: subprogram_declarations . subprogram_declaration SEMICOLON
   16 subprogram_declaration: subprogram_head declarations subprogram_declarations . compound_statement

    FUNCTION   shift, and go to state 16
    PROCEDURE  shift, and go to state 17
    PBEGIN     shift, and go to state 18

    subprogram_declaration  go to state 19
    subprogram_head         go to state 20
    compound_statement      go to state 102


State 68

    7 type: ARRAY LBRACE . num DOTDOT num RBRACE OF type

    INTEGERNUM  shift, and go to state 49
    REALNUMBER  shift, and go to state 50
    SCIENTIFIC  shift, and go to state 51

    num  go to state 103


State 69

    4 declarations: declarations VAR identifier_list COLON type SEMICOLON .

    $default  reduce using rule 4 (declarations)


State 70

   23 optional_var: VAR .

    $default  reduce using rule 23 (optional_var)


State 71

   19 arguments: LPAREN parameter_list . RPAREN

    RPAREN  shift, and go to state 104


State 72

   21 parameter_list: optional_var . identifier_list COLON type
   22               | optional_var . identifier_list COLON type SEMICOLON parameter_list

    IDENTIFIER  shift, and go to state 6

    identifier_list  go to state 105


State 73

   17 subprogram_head: FUNCTION IDENTIFIER arguments COLON . standard_type SEMICOLON

    STRING   shift, and go to state 38
    INTEGER  shift, and go to state 39
    REAL     shift, and go to state 40

    standard_type  go to state 106


State 74

   18 subprogram_head: PROCEDURE IDENTIFIER arguments SEMICOLON .

    $default  reduce using rule 18 (subprogram_head)


State 75

   57 factor: NOT factor .

    $default  reduce using rule 57 (factor)


State 76

   56 factor: LPAREN expression . RPAREN

    RPAREN  shift, and go to state 107


State 77

   58 factor: SUBOP factor .

    $default  reduce using rule 58 (factor)


State 78

   53 factor: IDENTIFIER LPAREN . expression_list RPAREN

    NOT         shift, and go to state 46
    LPAREN      shift, and go to state 47
    SUBOP       shift, and go to state 48
    INTEGERNUM  shift, and go to state 49
    REALNUMBER  shift, and go to state 50
    SCIENTIFIC  shift, and go to state 51
    IDENTIFIER  shift, and go to state 52
    LITERALSTR  shift, and go to state 53

    num                go to state 54
    expression_list    go to state 108
    expression         go to state 99
    boolexpression     go to state 56
    simple_expression  go to state 57
    term               go to state 58
    factor             go to state 59


State 79

   52 factor: IDENTIFIER tail .

    $default  reduce using rule 52 (factor)


State 80

   34 statement: WHILE expression DO . statement

    WHILE       shift, and go to state 25
    IF          shift, and go to state 26
    PBEGIN      shift, and go to state 18
    IDENTIFIER  shift, and go to state 27

    $default  reduce using rule 35 (statement)

    compound_statement   go to state 28
    statement            go to state 109
    variable             go to state 32
    procedure_statement  go to state 33


State 81

   44 expression: boolexpression AND . boolexpression

    NOT         shift, and go to state 46
    LPAREN      shift, and go to state 47
    SUBOP       shift, and go to state 48
    INTEGERNUM  shift, and go to state 49
    REALNUMBER  shift, and go to state 50
    SCIENTIFIC  shift, and go to state 51
    IDENTIFIER  shift, and go to state 52
    LITERALSTR  shift, and go to state 53

    num                go to state 54
    boolexpression     go to state 110
    simple_expression  go to state 57
    term               go to state 58
    factor             go to state 59


State 82

   45 expression: boolexpression OR . boolexpression

    NOT         shift, and go to state 46
    LPAREN      shift, and go to state 47
    SUBOP       shift, and go to state 48
    INTEGERNUM  shift, and go to state 49
    REALNUMBER  shift, and go to state 50
    SCIENTIFIC  shift, and go to state 51
    IDENTIFIER  shift, and go to state 52
    LITERALSTR  shift, and go to state 53

    num                go to state 54
    boolexpression     go to state 111
    simple_expression  go to state 57
    term               go to state 58
    factor             go to state 59


State 83

   67 relop: GETOP .

    $default  reduce using rule 67 (relop)


State 84

   64 relop: GTOP .

    $default  reduce using rule 64 (relop)


State 85

   66 relop: LETOP .

    $default  reduce using rule 66 (relop)


State 86

   63 relop: LTOP .

    $default  reduce using rule 63 (relop)


State 87

   59 addop: ADDOP .

    $default  reduce using rule 59 (addop)


State 88

   65 relop: EQOP .

    $default  reduce using rule 65 (relop)


State 89

   68 relop: NEQOP .

    $default  reduce using rule 68 (relop)


State 90

   60 addop: SUBOP .

    $default  reduce using rule 60 (addop)


State 91

   49 simple_expression: simple_expression addop . term

    NOT         shift, and go to state 46
    LPAREN      shift, and go to state 47
    SUBOP       shift, and go to state 48
    INTEGERNUM  shift, and go to state 49
    REALNUMBER  shift, and go to state 50
    SCIENTIFIC  shift, and go to state 51
    IDENTIFIER  shift, and go to state 52
    LITERALSTR  shift, and go to state 53

    num     go to state 54
    term    go to state 112
    factor  go to state 59


State 92

   47 boolexpression: simple_expression relop . simple_expression

    NOT         shift, and go to state 46
    LPAREN      shift, and go to state 47
    SUBOP       shift, and go to state 48
    INTEGERNUM  shift, and go to state 49
    REALNUMBER  shift, and go to state 50
    SCIENTIFIC  shift, and go to state 51
    IDENTIFIER  shift, and go to state 52
    LITERALSTR  shift, and go to state 53

    num                go to state 54
    simple_expression  go to state 113
    term               go to state 58
    factor             go to state 59


State 93

   61 mulop: MULOP .

    $default  reduce using rule 61 (mulop)


State 94

   62 mulop: DIVOP .

    $default  reduce using rule 62 (mulop)


State 95

   51 term: term mulop . factor

    NOT         shift, and go to state 46
    LPAREN      shift, and go to state 47
    SUBOP       shift, and go to state 48
    INTEGERNUM  shift, and go to state 49
    REALNUMBER  shift, and go to state 50
    SCIENTIFIC  shift, and go to state 51
    IDENTIFIER  shift, and go to state 52
    LITERALSTR  shift, and go to state 53

    num     go to state 54
    factor  go to state 114


State 96

   33 statement: IF expression THEN . statement ELSE statement

    WHILE       shift, and go to state 25
    IF          shift, and go to state 26
    PBEGIN      shift, and go to state 18
    IDENTIFIER  shift, and go to state 27

    $default  reduce using rule 35 (statement)

    compound_statement   go to state 28
    statement            go to state 115
    variable             go to state 32
    procedure_statement  go to state 33


State 97

   37 tail: LBRACE expression . RBRACE tail

    RBRACE  shift, and go to state 116


State 98

   40 procedure_statement: IDENTIFIER LPAREN expression_list . RPAREN
   42 expression_list: expression_list . COMMA expression

    COMMA   shift, and go to state 117
    RPAREN  shift, and go to state 118


State 99

   41 expression_list: expression .

    $default  reduce using rule 41 (expression_list)


State 100

   29 statement_list: statement_list SEMICOLON statement .

    $default  reduce using rule 29 (statement_list)


State 101

   30 statement: variable ASSIGNMENT expression .

    $default  reduce using rule 30 (statement)


State 102

   16 subprogram_declaration: subprogram_head declarations subprogram_declarations compound_statement .

    $default  reduce using rule 16 (subprogram_declaration)


State 103

    7 type: ARRAY LBRACE num . DOTDOT num RBRACE OF type

    DOTDOT  shift, and go to state 119


State 104

   19 arguments: LPAREN parameter_list RPAREN .

    $default  reduce using rule 19 (arguments)


State 105

    3 identifier_list: identifier_list . COMMA IDENTIFIER
   21 parameter_list: optional_var identifier_list . COLON type
   22               | optional_var identifier_list . COLON type SEMICOLON parameter_list

    COLON  shift, and go to state 120
    COMMA  shift, and go to state 8


State 106

   17 subprogram_head: FUNCTION IDENTIFIER arguments COLON standard_type . SEMICOLON

    SEMICOLON  shift, and go to state 121


State 107

   56 factor: LPAREN expression RPAREN .

    $default  reduce using rule 56 (factor)


State 108

   42 expression_list: expression_list . COMMA expression
   53 factor: IDENTIFIER LPAREN expression_list . RPAREN

    COMMA   shift, and go to state 117
    RPAREN  shift, and go to state 122


State 109

   34 statement: WHILE expression DO statement .

    $default  reduce using rule 34 (statement)


State 110

   44 expression: boolexpression AND boolexpression .

    $default  reduce using rule 44 (expression)


State 111

   45 expression: boolexpression OR boolexpression .

    $default  reduce using rule 45 (expression)


State 112

   49 simple_expression: simple_expression addop term .
   51 term: term . mulop factor

    MULOP  shift, and go to state 93
    DIVOP  shift, and go to state 94

    $default  reduce using rule 49 (simple_expression)

    mulop  go to state 95


State 113

   47 boolexpression: simple_expression relop simple_expression .
   49 simple_expression: simple_expression . addop term

    ADDOP  shift, and go to state 87
    SUBOP  shift, and go to state 90

    $default  reduce using rule 47 (boolexpression)

    addop  go to state 91


State 114

   51 term: term mulop factor .

    $default  reduce using rule 51 (term)


State 115

   33 statement: IF expression THEN statement . ELSE statement
